--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -77,5 +77,8 @@
     <ClInclude Include="Bullet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Character.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
