--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="Bar.h" />
     <ClInclude Include="Bot.h" />
     <ClInclude Include="Bullet.h" />
+    <ClInclude Include="Character.h" />
     <ClInclude Include="Create.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameObjectManager.h" />
