--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Tree.h" />
+    <ClInclude Include="UserInterface.h" />
     <ClInclude Include="Weapon.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
