--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -83,5 +83,8 @@
     <ClInclude Include="Character.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="UserInterface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
