--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="Inventory.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Spawner.cpp" />
     <ClCompile Include="UserInterface.cpp" />
     <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
@@ -179,6 +180,7 @@
     <ClInclude Include="Pistol.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rifle.h" />
+    <ClInclude Include="Spawner.h" />
     <ClInclude Include="Stone.h" />
     <ClInclude Include="Target.h" />
     <ClInclude Include="TextureManager.h" />
