--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -124,14 +124,16 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;OS_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>S:\dev\source\Cpp-Game-master\Library\flatbuffers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;sfml-audio-d.lib;sfml-network-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;sfml-audio-d.lib;sfml-network-d.lib;flatbuffers.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>S:\dev\source\Cpp-Game-master\Library\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -155,12 +157,21 @@
     <ClCompile Include="Bot.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="Connection.cpp" />
     <ClCompile Include="Crate.cpp" />
     <ClCompile Include="Fist.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameObjectManager.cpp" />
     <ClCompile Include="Inventory.cpp" />
+    <ClCompile Include="IPAddress.cpp" />
+    <ClCompile Include="IPAddressV4.cpp" />
+    <ClCompile Include="IPAddressV6.cpp" />
+    <ClCompile Include="IPEndPoint.cpp" />
+    <ClCompile Include="Packet.cpp" />
+    <ClCompile Include="PacketManager.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Server.cpp" />
+    <ClCompile Include="Socket.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Spawner.cpp" />
     <ClCompile Include="UserInterface.cpp" />
@@ -172,14 +183,35 @@
     <ClInclude Include="Bot.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Character.h" />
+    <ClInclude Include="Config.h" />
+    <ClInclude Include="Connection.h" />
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="Crate.h" />
     <ClInclude Include="Fist.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameObjectManager.h" />
     <ClInclude Include="Inventory.h" />
+    <ClInclude Include="IPAddress.h" />
+    <ClInclude Include="IPAddressV4.h" />
+    <ClInclude Include="IPAddressV6.h" />
+    <ClInclude Include="IPEndPoint.h" />
+    <ClInclude Include="IPVersion.h" />
+    <ClInclude Include="Message.h" />
+    <ClInclude Include="NETResult.h" />
+    <ClInclude Include="NetUtil.h" />
+    <ClInclude Include="Packet.h" />
+    <ClInclude Include="PacketManager.h" />
+    <ClInclude Include="PacketType.h" />
     <ClInclude Include="Pistol.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Protocol.h" />
     <ClInclude Include="Rifle.h" />
+    <ClInclude Include="Server.h" />
+    <ClInclude Include="Socket.h" />
+    <ClInclude Include="SocketException.h" />
+    <ClInclude Include="SocketIOModels.h" />
+    <ClInclude Include="SocketOption.h" />
+    <ClInclude Include="SocketType.h" />
     <ClInclude Include="Spawner.h" />
     <ClInclude Include="Stone.h" />
     <ClInclude Include="Target.h" />
