--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -199,6 +199,7 @@
     <ClInclude Include="Message.h" />
     <ClInclude Include="NETResult.h" />
     <ClInclude Include="NetUtil.h" />
+    <ClInclude Include="OnlinePlayer.h" />
     <ClInclude Include="Packet.h" />
     <ClInclude Include="PacketManager.h" />
     <ClInclude Include="PacketType.h" />
